# flatland

./: .gitignore  CLAUDE.md
.claude/agents/: staff-build-error-resolver.md  staff-code-reviewer.md  staff-cpp-ros-engineer.md  staff-flatland-plugin-dev.md  staff-planner.md  staff-simulation-physics-engineer.md  staff-tdd-guide.md
.claude/commands/: benchmark.md  lint.md  new-plugin.md  release.md  run-tests.md  update-claude-infrastructure.md
.claude/rules/common/: coding-style.md  git-workflow.md  security.md  testing.md
.claude/rules/cpp/: cpp-patterns.md
.claude/skills/flatland-fault-injection/: SKILL.md
.claude/skills/flatland-map-layers/: SKILL.md
docs/: noise_model_format.md  scenario_generator.md
docs/core_functions/: world.rst
flatland_msgs/: CMakeLists.txt
flatland_msgs/msg/: FaultGroundTruth.msg  FaultGroundTruthArray.msg
flatland_plugins/: CHANGELOG.rst  CMakeLists.txt  flatland_plugins.xml
flatland_plugins/doc/: actuator_dynamics.md  dynamic_map.md  fault_injection.md  variable_payload.md  wheel_friction.md
flatland_plugins/include/flatland_plugins/: actuator_dynamics.h  bumper.h  diff_drive.h  dynamic_map.h  fault_injection_registry.h  fault_injector.h  gps.h  imu.h  laser.h  localization_fault.h  trajectory_recorder.h  tricycle_drive.h  variable_payload.h  wheel_friction_model.h
flatland_plugins/launch/: record_rca_bag.launch
flatland_plugins/scripts/fault_eval/: README.md  score_rca.py
flatland_plugins/src/: actuator_dynamics.cpp  bumper.cpp  diff_drive.cpp  dynamic_map.cpp  fault_injection_registry.cpp  fault_injector.cpp  gps.cpp  imu.cpp  laser.cpp  localization_fault.cpp  trajectory_recorder.cpp  tricycle_drive.cpp  variable_payload.cpp  wheel_friction_model.cpp  world_random_wall.cpp
flatland_plugins/test/: actuator_dynamics_test.cpp  actuator_fault_test.cpp  actuator_fault_test.test  diff_drive_actuator_test.cpp  diff_drive_actuator_test.test  diff_drive_test.cpp  dynamic_map_test.cpp  dynamic_map_test.test  environment_fault_test.cpp  environment_fault_test.test  fault_injection_test.cpp  fault_injector_test.cpp  fault_injector_test.test  localization_fault_test.cpp  localization_fault_test.test  odom_fault_test.cpp  odom_fault_test.test  sensor_fault_test.cpp  sensor_fault_test.test  surface_friction_test.cpp  surface_friction_test.test  trajectory_recorder_test.cpp  trajectory_recorder_test.test  tricycle_actuator_test.cpp  tricycle_actuator_test.test  tricycle_drive_test.cpp  variable_payload_test.cpp  variable_payload_test.test  wheel_friction_model_test.cpp
flatland_plugins/test/actuator_fault_tests/: robot.model.yaml  world_asymmetric.yaml  world_clean.yaml  world_latency.yaml  world_locked.yaml  world_motor_degradation.yaml
flatland_plugins/test/diff_drive_actuator_tests/: robot_baseline.model.yaml  robot_deadband.model.yaml  robot_latency.model.yaml  robot_torque.model.yaml  robot_torque_friction.model.yaml  world_baseline.yaml  world_deadband.yaml  world_latency.yaml  world_torque.yaml  world_torque_friction.yaml
flatland_plugins/test/diff_drive_tests/: robot.model.yaml  world.yaml
flatland_plugins/test/dynamic_map_tests/: map.yaml  world.yaml
flatland_plugins/test/environment_fault_tests/: drive_robot.model.yaml  furniture.model.yaml  laser_robot.model.yaml  person.model.yaml  world_clean.yaml  world_clean_drive.yaml  world_furniture.yaml  world_obstacle.yaml  world_spill.yaml
flatland_plugins/test/fault_injection_tests/: fault_world.yaml  robot.model.yaml
flatland_plugins/test/localization_fault_tests/: localization_world.yaml  robot.model.yaml  tricycle_world.yaml
flatland_plugins/test/sensor_fault_tests/: bumper_fault_robot.model.yaml  bumper_fault_world.yaml  gps_fault_robot.model.yaml  gps_fault_world.yaml  laser_fault_robot.model.yaml  laser_fault_world.yaml
flatland_plugins/test/surface_friction_tests/: map.yaml  robot.model.yaml  world.yaml
flatland_plugins/test/trajectory_recorder_tests/: trajectory.world.yaml  trajectory_robot.model.yaml
flatland_plugins/test/tricycle_actuator_tests/: cleaner_deadband.model.yaml  world_deadband.yaml
flatland_plugins/test/tricycle_drive_tests/: cleaner_friction.model.yaml  world_friction.yaml
flatland_plugins/test/variable_payload_tests/: map.yaml  water_tank.world.yaml  water_tank_agv.model.yaml
flatland_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
flatland_server/doc/: contact_solver.md  determinism.md  diagnostic_overlays.md  map_mutation.md  surface_friction.md
flatland_server/launch/: benchmark.launch  scenario_run.launch  server.launch
flatland_server/src/: body.cpp  flatland_benchmark.cpp  flatland_scenario_runner.cpp  flatland_server_node.cpp  layer.cpp  map_mutator.cpp  noise_context.cpp  noise_model.cpp  random.cpp  scenario_scorer.cpp  simulation_manager.cpp  surface_friction_field.cpp  world.cpp  yaml_preprocessor.cpp
flatland_server/test/: determinism_test.cpp  determinism_test.test  load_world_test.cpp  map_mutator_integration_test.cpp  map_mutator_integration_test.test  map_mutator_test.cpp  noise_context_test.cpp  noise_model_test.cpp  occupancy_publisher_test.cpp  occupancy_publisher_test.test  random_test.cpp  scenario_runner_test.cpp  scenario_runner_test.test  scenario_scorer_test.cpp  solver_stability_test.cpp  solver_stability_test.test  surface_friction_field_test.cpp
flatland_viz/: CHANGELOG.rst  CMakeLists.txt
flatland_viz/src/: diagnostic_layer_panel.cpp  flatland_viz.cpp
noise_cal/: README.md  __init__.py  exporter.py  fit.py  schema.py
noise_cal/tests/: __init__.py  test_fit.py
scenario_gen/: .gitignore  README.md  __init__.py  curriculum.py  dr_distribution.py  failure_boundary.py  genome.py  orchestrate.py  param_space.json  render.py  run.py
scenario_gen/examples/: README.md  example_genome.json  sample_failure_boundary.json  sample_scenario_result.json
scenario_gen/proposers/: __init__.py  base.py  dr_proposer.py  llm_proposer.py  rl_proposer.py
scenario_gen/tests/: __init__.py  test_dr_controller.py  test_scenario_gen.py
scripts/: solver_tuning_sweep.sh
(+32 files in other folders)
